# user_service

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  Dockerfile  alembic.ini  docker-compose.yaml  pyproject.toml  readme.md
scripts/: entrypoint.sh
src/user_service/application/: constants.py  exceptions.py
src/user_service/application/dto/: base.py  user.py
src/user_service/application/models/: __init__.py  user.py
src/user_service/application/protocols/: password_manager.py  uow.py
src/user_service/application/protocols/gateways/: __init__.py  user.py
src/user_service/application/use_cases/: user.py
src/user_service/infrastructure/: passlib_password_manager.py
src/user_service/infrastructure/sqla_db/: models.py
src/user_service/main/: __init__.py  web.py
src/user_service/main/providers/: __init__.py  connections.py  database.py  password_manager.py  use_cases.py
src/user_service/presentation/web/: __init__.py  endpoints.py  exception_handlers.py
tests/integration/: conftest.py
tests/integration/web/: test_acquire_lock_user_endpoint.py  test_create_user_endpoint.py  test_get_users_endpoint.py  test_release_lock_user_endpoint.py
tests/unit/: conftest.py  test_acquire_lock_user.py  test_acquire_lock_user_use_case.py  test_create_user.py  test_create_user_use_case.py  test_get_users.py  test_get_users_use_case.py  test_release_lock_user.py  test_release_lock_user_use_case.py
tests/unit/fakes/: fake_user_gateway.py
tests/unit/fixtures/: __init__.py  fake_password_manager.py  fake_uow.py
(+7 files in other folders)
