[tool.poetry]
name = "user-service"
version = "0.1.0"
description = "VK Internship Test Task"
authors = ["Grigory Yolkin <gyolkin380@yandex.ru>"]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.3"
pydantic = "^2.7.1"
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
uvicorn = "^0.29.0"
asyncpg = "^0.29.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
dishka = "^1.1.1"

[tool.poetry.group.dev.dependencies]
aiosqlite = "^0.20.0"
pre-commit = "^3.7.0"

[tool.poetry.group.test.dependencies]
aiosqlite = "^0.20.0"
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
